--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "cache-loader": "^4.1.0",
     "core-js": "^3.6.5",
     "element-ui": "2.13.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
